--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,3 +44,4 @@ set -g status-left '#[fg=colour32, bold]#S'
 
 # ステータスバー右隅に出すもの
 set -g status-right ''
+set-option -g default-command "reattach-to-user-namespace -l bash"
